# flask-simple-crypt

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  flask_simple_crypt.py  old_flask_simple_crypt.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_flask_simple_crypt.py
.circleci/: config.yml
